# GLSL-Practice

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
lib/: shader.hpp
shaders/: main.frag  main.vert
src/: glad.c
